--- a/LanLordz.SiteTools/LanLordz.SiteTools.csproj
+++ b/LanLordz.SiteTools/LanLordz.SiteTools.csproj
@@ -59,8 +59,14 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AntiXssLibrary, Version=1.5.0.0, Culture=neutral, PublicKeyToken=5906d2bb3d8a12c4, processorArchitecture=MSIL" />
-    <Reference Include="Recaptcha, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c5094c098a70db85, processorArchitecture=MSIL" />
+    <Reference Include="AntiXssLibrary, Version=1.5.0.0, Culture=neutral, PublicKeyToken=5906d2bb3d8a12c4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\AntiXssLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Recaptcha, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c5094c098a70db85, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Recaptcha.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -99,10 +105,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecureRandom.cs" />
     <Compile Include="HttpErrorResult.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="AntiXssLibrary.dll" />
-    <Content Include="Recaptcha.dll" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\LanLordzMVC\LanLordz.pfx">
