Added SqlServerSpatial.dll to the output directory of the application.
--HG--
extra : convert_revision : svn%3Ac102de6d-fbcd-4082-88ef-c2bab1378b82%4040889

--- a/LanLordzMVC/LanLordzMVC.csproj
+++ b/LanLordzMVC/LanLordzMVC.csproj
@@ -299,6 +299,10 @@
     </None>
     <None Include="CustomDictionary.xml" />
     <None Include="Resources\SvgScriptBlock.txt" />
+    <None Include="..\SqlServerSpatial.dll">
+      <Link>SqlServerSpatial.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="Scripts\jquery.Jcrop.min.js" />
     <Content Include="Scripts\jquery.maphilight.min.js" />
     <Content Include="Skins\Astro\Jcrop.gif" />
