--- a/LanLordz.SiteTools/LanLordz.SiteTools.csproj
+++ b/LanLordz.SiteTools/LanLordz.SiteTools.csproj
@@ -13,7 +13,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\LanLordz\LanLordz.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\LanLordz.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,7 +66,7 @@
     <Compile Include="HttpErrorResult.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\LanLordz\LanLordz.pfx">
+    <None Include="..\LanLordz.pfx">
       <Link>LanLordz.pfx</Link>
     </None>
   </ItemGroup>
