--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -15,7 +15,8 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <SignAssembly>false</SignAssembly>
-    <AssemblyOriginatorKeyFile>LanLordz.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -222,7 +223,6 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <None Include="Models\lanlordz db schema.sql" />
-    <None Include="LanLordz.pfx" />
     <None Include="Models\LanLordz.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>LanLordz.designer.cs</LastGenOutput>
