--- a/LanLordz.SiteTools/LanLordz.SiteTools.csproj
+++ b/LanLordz.SiteTools/LanLordz.SiteTools.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>LanLordz.SiteTools</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>..\LanLordz.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
