Converted database schema to a database project.

--- a/.hgignore
+++ b/.hgignore
@@ -1,5 +1,7 @@
-glob:**/bin/**
-glob:**/obj/**
-glob:*.suo
-glob:*.user
-glob:StyleCop.Cache
+syntax: glob
+**/bin/**
+**/obj/**
+**/sql/**
+*.suo
+*.user
+StyleCop.Cache
