Fixed issues on first run of the Master Configuration.

--- a/LanLordz/Web.config
+++ b/LanLordz/Web.config
@@ -6,7 +6,7 @@
     </configSections>
 
     <connectionStrings>
-        <add name="lanlordz_webConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=lanlordz_web;Persist Security Info=True;User ID=lanlordz_web;Password=LLCrew24" providerName="System.Data.SqlClient" />
+        <add name="lanlordz_webConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=lanlordz_web;Persist Security Info=True;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
 
     <cachingConfiguration defaultCacheManager="DataCache">
@@ -60,6 +60,8 @@
         </compilation>
 
         <authentication mode="None" />
+
+        <httpRuntime requestValidationMode="2.0" />
 
         <pages theme="" validateRequest="false" enableViewStateMac="false">
             <namespaces>
