Removed the round-about way of accessing controller functionality from the views, in favor of using the ViewBag to actually carry a reference to the Controller.

--- a/LanLordz/Web.config
+++ b/LanLordz/Web.config
@@ -37,7 +37,7 @@
             </assemblies>
         </compilation>
 
-        <pages automaticEncoding="true" pageBaseType="LanLordz.Views.BasePage" statementMarker="# ">
+        <pages automaticEncoding="true" pageBaseType="LanLordz.Views.BaseView" statementMarker="# ">
             <namespaces>
                 <add namespace="System"/>
                 <add namespace="System.Collections.Generic"/>
