--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -210,6 +210,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Views\BaseView`1.cs" />
     <Compile Include="Views\BaseView.cs" />
   </ItemGroup>
   <ItemGroup>
