--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -219,6 +220,7 @@
     </None>
     <Content Include="apple-touch-icon-precomposed.png" />
     <CodeAnalysisDictionary Include="CustomDictionary.xml" />
+    <Content Include="Content\FeedIcon.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <None Include="Models\LanLordz.dbml">
@@ -383,7 +385,9 @@
     <Content Include="Skins\Suprise.png" />
     <Content Include="Skins\Tongue.png" />
     <Content Include="Skins\Wink.png" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
