--- a/LanLordz/Web.config
+++ b/LanLordz/Web.config
@@ -44,6 +44,7 @@
                 <add namespace="System.Linq"/>
                 <add namespace="System.Web.Mvc"/>
                 <add namespace="System.Web.Mvc.Html"/>
+                <add namespace="LanLordz.Views"/>
             </namespaces>
         </pages>
     </spark>
