Added jQuery UI.

--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -233,6 +233,7 @@
     <None Include="Resources\SvgScriptBlock.txt" />
     <Content Include="Plugins\StandardTournaments.dll" />
     <Content Include="robots.txt" />
+    <Content Include="Scripts\jquery-ui-1.8.16.min.js" />
     <Content Include="Scripts\jquery.Jcrop.min.js" />
     <Content Include="Scripts\jquery.maphilight.min.js" />
     <Content Include="Scripts\svgcheck.js" />
@@ -250,7 +251,21 @@
     <Content Include="Skins\Astro\Explore_1920.jpg" />
     <Content Include="Skins\Astro\ForumRead.png" />
     <Content Include="Skins\Astro\ForumUnread.png" />
+    <Content Include="Skins\Astro\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Skins\Astro\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Skins\Astro\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Skins\Astro\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Skins\Astro\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Skins\Astro\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Skins\Astro\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Skins\Astro\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Skins\Astro\images\ui-icons_222222_256x240.png" />
+    <Content Include="Skins\Astro\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Skins\Astro\images\ui-icons_454545_256x240.png" />
+    <Content Include="Skins\Astro\images\ui-icons_888888_256x240.png" />
+    <Content Include="Skins\Astro\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Skins\Astro\Jcrop.gif" />
+    <Content Include="Skins\Astro\jquery-ui-1.8.16.smoothness.css" />
     <Content Include="Skins\Astro\jquery.Jcrop.css" />
     <Content Include="Skins\Astro\LANLordz.png" />
     <Content Include="Skins\Astro\NavBorder.png" />
@@ -280,7 +295,21 @@
     <Content Include="Skins\ClassicLL\forums.css" />
     <Content Include="Skins\ClassicLL\ForumUnread.gif" />
     <Content Include="Skins\ClassicLL\iestyles.txt" />
+    <Content Include="Skins\ClassicLL\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Skins\ClassicLL\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Skins\ClassicLL\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Skins\ClassicLL\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Skins\ClassicLL\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Skins\ClassicLL\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Skins\ClassicLL\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Skins\ClassicLL\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Skins\ClassicLL\images\ui-icons_222222_256x240.png" />
+    <Content Include="Skins\ClassicLL\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Skins\ClassicLL\images\ui-icons_454545_256x240.png" />
+    <Content Include="Skins\ClassicLL\images\ui-icons_888888_256x240.png" />
+    <Content Include="Skins\ClassicLL\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Skins\ClassicLL\Jcrop.gif" />
+    <Content Include="Skins\ClassicLL\jquery-ui-1.8.16.smoothness.css" />
     <Content Include="Skins\ClassicLL\jquery.Jcrop.css" />
     <Content Include="Skins\ClassicLL\lan.css" />
     <Content Include="Skins\ClassicLL\lanlordz.css" />
@@ -308,7 +337,21 @@
     <Content Include="Skins\Dead\ForumRead.png" />
     <Content Include="Skins\Dead\ForumUnread.png" />
     <Content Include="Skins\Dead\HeaderBG.png" />
+    <Content Include="Skins\Dead\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Skins\Dead\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Skins\Dead\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Skins\Dead\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Skins\Dead\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Skins\Dead\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Skins\Dead\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Skins\Dead\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Skins\Dead\images\ui-icons_222222_256x240.png" />
+    <Content Include="Skins\Dead\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Skins\Dead\images\ui-icons_454545_256x240.png" />
+    <Content Include="Skins\Dead\images\ui-icons_888888_256x240.png" />
+    <Content Include="Skins\Dead\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Skins\Dead\Jcrop.gif" />
+    <Content Include="Skins\Dead\jquery-ui-1.8.16.smoothness.css" />
     <Content Include="Skins\Dead\jquery.Jcrop.css" />
     <Content Include="Skins\Dead\MainBG.png" />
     <Content Include="Skins\Dead\MarkRead.png" />
@@ -342,7 +385,21 @@
     <Content Include="Skins\Default\Edit.png" />
     <Content Include="Skins\Default\ForumRead.png" />
     <Content Include="Skins\Default\ForumUnread.png" />
+    <Content Include="Skins\Default\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Skins\Default\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Skins\Default\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Skins\Default\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Skins\Default\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Skins\Default\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Skins\Default\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Skins\Default\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Skins\Default\images\ui-icons_222222_256x240.png" />
+    <Content Include="Skins\Default\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Skins\Default\images\ui-icons_454545_256x240.png" />
+    <Content Include="Skins\Default\images\ui-icons_888888_256x240.png" />
+    <Content Include="Skins\Default\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Skins\Default\Jcrop.gif" />
+    <Content Include="Skins\Default\jquery-ui-1.8.16.smoothness.css" />
     <Content Include="Skins\Default\Locked.gif" />
     <Content Include="Skins\Default\MarkRead.png" />
     <Content Include="Skins\Default\Moderate.png" />
@@ -366,7 +423,21 @@
     <Content Include="Skins\KT\ForumRead.png" />
     <Content Include="Skins\KT\ForumUnread.png" />
     <Content Include="Skins\KT\HeaderBackground.png" />
+    <Content Include="Skins\KT\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Skins\KT\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Skins\KT\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Skins\KT\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Skins\KT\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Skins\KT\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Skins\KT\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Skins\KT\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Skins\KT\images\ui-icons_222222_256x240.png" />
+    <Content Include="Skins\KT\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Skins\KT\images\ui-icons_454545_256x240.png" />
+    <Content Include="Skins\KT\images\ui-icons_888888_256x240.png" />
+    <Content Include="Skins\KT\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Skins\KT\Jcrop.gif" />
+    <Content Include="Skins\KT\jquery-ui-1.8.16.smoothness.css" />
     <Content Include="Skins\KT\jquery.Jcrop.css" />
     <Content Include="Skins\KT\kt.css" />
     <Content Include="Skins\KT\MarkRead.png" />
@@ -379,7 +450,21 @@
     <Content Include="Skins\KT\StickyUnread.png" />
     <Content Include="Skins\KT\ViewUnread.png" />
     <Content Include="Skins\Love.png" />
+    <Content Include="Skins\Mobile\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Skins\Mobile\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Skins\Mobile\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Skins\Mobile\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Skins\Mobile\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Skins\Mobile\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Skins\Mobile\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Skins\Mobile\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Skins\Mobile\images\ui-icons_222222_256x240.png" />
+    <Content Include="Skins\Mobile\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Skins\Mobile\images\ui-icons_454545_256x240.png" />
+    <Content Include="Skins\Mobile\images\ui-icons_888888_256x240.png" />
+    <Content Include="Skins\Mobile\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Skins\Mobile\Jcrop.gif" />
+    <Content Include="Skins\Mobile\jquery-ui-1.8.16.smoothness.css" />
     <Content Include="Skins\Mobile\jquery.Jcrop.css" />
     <Content Include="Skins\PngFix.htc" />
     <Content Include="Skins\Scowl.png" />
@@ -425,7 +510,9 @@
     <Content Include="Views\Crew\DoorPrizes.spark" />
     <Content Include="Views\Crew\EditImages.spark" />
     <Content Include="Views\Crew\Index.spark" />
-    <Content Include="Views\Crew\UserCheckIn.spark" />
+    <Content Include="Views\Crew\UserCheckIn.spark">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Events\CreateEvent.spark" />
     <Content Include="Views\Events\CreateTeam.spark" />
     <Content Include="Views\Events\CreateTournament.spark" />
