--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -233,6 +233,7 @@
     <None Include="Resources\SvgScriptBlock.txt" />
     <Content Include="Plugins\StandardTournaments.dll" />
     <Content Include="robots.txt" />
+    <Content Include="Scripts\jquery-lanlordz-extensions.js" />
     <Content Include="Scripts\jquery-ui-1.8.16.min.js" />
     <Content Include="Scripts\jquery.Jcrop.min.js" />
     <Content Include="Scripts\jquery.maphilight.min.js" />
