--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -569,7 +569,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Admin\EditTitles.spark" />
-    <None Include="Views\Admin\ResetPassword.spark" />
+    <Content Include="Views\Admin\ResetPassword.spark" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
