--- a/LanLordz/Views/Web.config
+++ b/LanLordz/Views/Web.config
@@ -44,10 +44,14 @@
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
+        <add namespace="System.Linq" />
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="LanLordz" />
+        <add namespace="LanLordz.Controllers" />
+        <add namespace="LanLordz.Views" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
