--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -529,11 +529,11 @@
     <Content Include="Views\Events\InputScoresPickRound.spark" />
     <Content Include="Views\Events\JoinTeam.spark" />
     <Content Include="Views\Events\LeaveTeam.spark" />
-    <None Include="Views\Events\LockTeams.cshtml" />
+    <Content Include="Views\Events\LockTeams.cshtml" />
     <Content Include="Views\Events\ManageTeam.spark" />
     <Content Include="Views\Events\RollBackRound.spark" />
     <Content Include="Views\Events\StartNextRound.spark" />
-    <None Include="Views\Events\UnlockTeams.cshtml" />
+    <Content Include="Views\Events\UnlockTeams.cshtml" />
     <Content Include="Views\Forums\CreatePost.spark" />
     <Content Include="Views\Forums\DeletePost.spark" />
     <Content Include="Views\Forums\EditPost.spark" />
