Converted the Account views to Razor.
--HG--
rename : LanLordz/Views/Account/ChangeAvatar.spark => LanLordz/Views/Account/ChangeAvatar.cshtml
rename : LanLordz/Views/Account/ChangePassword.spark => LanLordz/Views/Account/ChangePassword.cshtml
rename : LanLordz/Views/Account/ChangeSucceeded.spark => LanLordz/Views/Account/ChangeSucceeded.cshtml
rename : LanLordz/Views/Account/ConfirmEmail.spark => LanLordz/Views/Account/ConfirmEmail.cshtml
rename : LanLordz/Views/Account/ConfirmSuccess.spark => LanLordz/Views/Account/ConfirmSuccess.cshtml
rename : LanLordz/Views/Account/EditProfile.spark => LanLordz/Views/Account/EditProfile.cshtml
rename : LanLordz/Views/Account/Index.spark => LanLordz/Views/Account/Index.cshtml
rename : LanLordz/Views/Account/LogOn.spark => LanLordz/Views/Account/LogOn.cshtml
rename : LanLordz/Views/Account/Register.spark => LanLordz/Views/Account/Register.cshtml
rename : LanLordz/Views/Account/RegistrationSuccessful.spark => LanLordz/Views/Account/RegistrationSuccessful.cshtml
rename : LanLordz/Views/Account/ViewProfile.spark => LanLordz/Views/Account/ViewProfile.cshtml

--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -488,17 +488,17 @@
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Views\Account\ChangeAvatar.spark" />
-    <Content Include="Views\Account\ChangePassword.spark" />
-    <Content Include="Views\Account\ChangeSucceeded.spark" />
-    <Content Include="Views\Account\ConfirmEmail.spark" />
-    <Content Include="Views\Account\ConfirmSuccess.spark" />
-    <Content Include="Views\Account\EditProfile.spark" />
-    <Content Include="Views\Account\Index.spark" />
-    <Content Include="Views\Account\LogOn.spark" />
-    <Content Include="Views\Account\Register.spark" />
-    <Content Include="Views\Account\RegistrationSuccessful.spark" />
-    <Content Include="Views\Account\ViewProfile.spark" />
+    <Content Include="Views\Account\ChangeAvatar.cshtml" />
+    <Content Include="Views\Account\ChangePassword.cshtml" />
+    <Content Include="Views\Account\ChangeSucceeded.cshtml" />
+    <Content Include="Views\Account\ConfirmEmail.cshtml" />
+    <Content Include="Views\Account\ConfirmSuccess.cshtml" />
+    <Content Include="Views\Account\EditProfile.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Account\LogOn.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\RegistrationSuccessful.cshtml" />
+    <Content Include="Views\Account\ViewProfile.cshtml" />
     <Content Include="Views\Admin\EditConfig.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\SendMail.cshtml" />
