--- a/LanLordz/Views/Web.config
+++ b/LanLordz/Views/Web.config
@@ -51,6 +51,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="LanLordz" />
         <add namespace="LanLordz.Controllers" />
+        <add namespace="LanLordz.SiteTools" />
         <add namespace="LanLordz.Views" />
       </namespaces>
     </pages>
